# Testproject

./: .gitignore  .gitlab-ci.yml  .project  .travis.yml  CMakeLists.txt  README.md  build.gradle  index.html  index_template.html  settings.gradle
.github/workflows/: gradle.yml
Jacoco/: index.html  jacoco-sessions.html
Jacoco/main.java/: Complex.html  Main.html  index.html  index.source.html
Javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
Javadoc/main/java/: Complex.html  Main.html  package-frame.html  package-summary.html  package-tree.html
Tests_Results/: index.html
Tests_Results/classes/: test.java.ComplexTest.html
src/main/: CMakeLists.txt
src/main/java/: Complex.java  Main.java
src/test/: CMakeLists.txt
src/test/java/: ComplexTest.java
